chore: update to JDK 23